src/main/java/com/example/rankomat/error/ResourceNotFoundException.java
package com.example.rankomat.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
